# QRShareExtensionExample

./: README.md  pyproject.toml
qr_share_extension_example/: ClientExample.py  ConsoleView.py  FTPClient.py  ViewExample.py
